// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Root MST model adds menus 1`] = `
Array [
  Object {
    "label": "File",
    "menuItems": Array [
      Object {
        "icon": Object {
          "$$typeof": Symbol(react.memo),
          "compare": null,
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          },
        },
        "label": "New session",
        "onClick": [Function],
      },
      Object {
        "icon": Object {
          "$$typeof": Symbol(react.memo),
          "compare": null,
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          },
        },
        "label": "Import session…",
        "onClick": [Function],
      },
      Object {
        "icon": Object {
          "$$typeof": Symbol(react.memo),
          "compare": null,
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          },
        },
        "label": "Export session",
        "onClick": [Function],
      },
      Object {
        "icon": Object {
          "$$typeof": Symbol(react.memo),
          "compare": null,
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          },
        },
        "label": "Open session…",
        "onClick": [Function],
      },
      Object {
        "icon": Object {
          "$$typeof": Symbol(react.memo),
          "compare": null,
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          },
        },
        "label": "Save session",
        "onClick": [Function],
      },
      Object {
        "icon": Object {
          "$$typeof": Symbol(react.memo),
          "compare": null,
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          },
        },
        "label": "Duplicate session",
        "onClick": [Function],
      },
      Object {
        "type": "divider",
      },
      Object {
        "icon": Object {
          "$$typeof": Symbol(react.memo),
          "compare": null,
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          },
        },
        "label": "Open track...",
        "onClick": [Function],
      },
      Object {
        "icon": [Function],
        "label": "Open connection...",
        "onClick": [Function],
      },
      Object {
        "type": "divider",
      },
      Object {
        "icon": Object {
          "$$typeof": Symbol(react.memo),
          "compare": null,
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          },
        },
        "label": "Return to splash screen",
        "onClick": [Function],
      },
    ],
  },
  Object {
    "label": "Add",
    "menuItems": Array [],
  },
  Object {
    "label": "Tools",
    "menuItems": Array [
      Object {
        "icon": Object {
          "$$typeof": Symbol(react.memo),
          "compare": null,
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          },
        },
        "label": "Plugin store",
        "onClick": [Function],
      },
    ],
  },
]
`;

exports[`Root MST model adds menus 2`] = `
Array [
  Object {
    "label": "File",
    "menuItems": Array [
      Object {
        "icon": Object {
          "$$typeof": Symbol(react.memo),
          "compare": null,
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          },
        },
        "label": "New session",
        "onClick": [Function],
      },
      Object {
        "icon": Object {
          "$$typeof": Symbol(react.memo),
          "compare": null,
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          },
        },
        "label": "Import session…",
        "onClick": [Function],
      },
      Object {
        "icon": Object {
          "$$typeof": Symbol(react.memo),
          "compare": null,
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          },
        },
        "label": "Export session",
        "onClick": [Function],
      },
      Object {
        "icon": Object {
          "$$typeof": Symbol(react.memo),
          "compare": null,
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          },
        },
        "label": "Open session…",
        "onClick": [Function],
      },
      Object {
        "icon": Object {
          "$$typeof": Symbol(react.memo),
          "compare": null,
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          },
        },
        "label": "Save session",
        "onClick": [Function],
      },
      Object {
        "icon": Object {
          "$$typeof": Symbol(react.memo),
          "compare": null,
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          },
        },
        "label": "Duplicate session",
        "onClick": [Function],
      },
      Object {
        "type": "divider",
      },
      Object {
        "icon": Object {
          "$$typeof": Symbol(react.memo),
          "compare": null,
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          },
        },
        "label": "Open track...",
        "onClick": [Function],
      },
      Object {
        "icon": [Function],
        "label": "Open connection...",
        "onClick": [Function],
      },
      Object {
        "type": "divider",
      },
      Object {
        "icon": Object {
          "$$typeof": Symbol(react.memo),
          "compare": null,
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          },
        },
        "label": "Return to splash screen",
        "onClick": [Function],
      },
    ],
  },
  Object {
    "label": "Add",
    "menuItems": Array [],
  },
  Object {
    "label": "Tools",
    "menuItems": Array [
      Object {
        "icon": Object {
          "$$typeof": Symbol(react.memo),
          "compare": null,
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          },
        },
        "label": "Plugin store",
        "onClick": [Function],
      },
    ],
  },
  Object {
    "label": "Second Menu",
    "menuItems": Array [
      Object {
        "label": "First Menu Item",
        "onClick": [Function],
      },
      Object {
        "label": "Second Menu Item",
        "onClick": [Function],
      },
      Object {
        "label": "First Sub Menu",
        "subMenu": Array [
          Object {
            "label": "First Sub Menu Item",
            "onClick": [Function],
          },
          Object {
            "label": "Second Sub Menu Item",
            "onClick": [Function],
          },
        ],
      },
    ],
  },
  Object {
    "label": "Third Menu",
    "menuItems": Array [],
  },
]
`;

exports[`Root MST model adds track and connection configs to an assembly 1`] = `
Object {
  "aliases": Array [
    "assemblyA",
  ],
  "name": "assembly1",
  "sequence": Object {
    "adapter": Object {
      "adapterId": "sequenceConfigAdapterId",
      "features": Array [
        Object {
          "end": 10,
          "refName": "ctgA",
          "seq": "cattgttgcg",
          "start": 0,
          "uniqueId": "firstId",
        },
      ],
      "type": "FromConfigSequenceAdapter",
    },
    "displays": Array [
      Object {
        "displayId": "sequenceConfigId-LinearReferenceSequenceDisplay",
        "type": "LinearReferenceSequenceDisplay",
      },
    ],
    "trackId": "sequenceConfigId",
    "type": "ReferenceSequenceTrack",
  },
}
`;

exports[`Root MST model adds track and connection configs to an assembly 2`] = `
Object {
  "displays": Array [
    Object {
      "displayId": "trackId0-LinearBasicDisplay",
      "type": "LinearBasicDisplay",
    },
    Object {
      "displayId": "trackId0-LinearArcDisplay",
      "type": "LinearArcDisplay",
    },
  ],
  "trackId": "trackId0",
  "type": "FeatureTrack",
}
`;

exports[`Root MST model adds track and connection configs to an assembly 3`] = `
Object {
  "connectionId": "connectionId0",
  "dataDirLocation": Object {
    "internetAccountId": undefined,
    "internetAccountPreAuthorization": undefined,
    "locationType": "UriLocation",
    "uri": "http://mysite.com/jbrowse/data/",
  },
  "type": "JBrowse1Connection",
}
`;

exports[`Root MST model creates with defaults 1`] = `Object {}`;
